--- a/lifts.css
+++ b/lifts.css
@@ -64,7 +64,7 @@ nav a:hover {
     padding: 10px 0;
 }
 marquee {
-    background-color: #1abc9c;
+    background-color: #7393bc;
     color: #fff;
     padding: 10px 0;
     font-size: 1.2em;
